@@ -6,6 +6,7 @@
 			body
 			{
 				font-family: Verdana, Arial, Helvetica, sans-serif;
+				margin: 0;
 			}
 
 			table
@@ -23,8 +24,14 @@
 				position: fixed;
 				top: 0;
 				width: 100%;
-				height: 50px;
+				height: 36px;
 				background: #eee;
+				padding: 8px;
+			}
+
+			#controller > *
+			{
+				vertical-align: top;
 			}
 
 			#viewer
@@ -35,6 +42,16 @@
 			.drag-hover #source
 			{
 				outline: 2px solid #0f0;
+			}
+
+			#step-bar
+			{
+				margin-left: 2em;
+			}
+
+			#step-slider
+			{
+				width: 50%;
 			}
 
 			#step
@@ -283,10 +300,12 @@
 		<div id="controller">
 			<textarea id="source"></textarea>
 			<button id="paint">Paint</button>
-			<input id="step-slider" type="range" />
-			<input id="step-backward" type="button" value="<" />
-			<input id="step-forward" type="button" value=">" />
-			<input id="step" type="text" size="3" />
+			<span id="step-bar">
+				<input id="step-slider" type="range" />
+				<input id="step-backward" type="button" value="<" />
+				<input id="step-forward" type="button" value=">" />
+				<input id="step" type="text" size="3" />
+			</span>
 		</div>
 	</body>
 </html>
